<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context="vn.edu.topica.activity.ThongTinThanhToanActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarThanhtoan"
        app:title="Thông tin người mua hàng"
        android:background="@color/blueGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ten_nguoi_mua"
        android:textColor="@color/blueGrayText"
        android:textSize="25sp"/>
    <EditText
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginLeft="@dimen/margin10"
        android:id="@+id/editTennguoimua"
        android:background="@drawable/border"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginRight="@dimen/margin10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginLeft="@dimen/margin10"
        android:textSize="25sp"
        android:textColor="@color/blueGrayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email1"/>
    <EditText
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginLeft="@dimen/margin10"
        android:id="@+id/editEmail"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginRight="@dimen/margin10"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginLeft="@dimen/margin10"
        android:textSize="25sp"
        android:textColor="@color/blueGrayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/so_dien_thoai"/>
    <EditText
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginLeft="@dimen/margin10"
        android:id="@+id/editPhonenumber"
        android:textColor="@color/white"
        android:background="@drawable/border"
        android:textSize="22sp"
        android:layout_marginRight="@dimen/margin10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/margin30"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_marginLeft="@dimen/margin30"
            android:layout_marginRight="@dimen/margin10"
            android:layout_weight="1"
            android:id="@+id/btnXacnhan"
            android:background="@color/blueGrayButton"
            android:text="@string/xac_nhan"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin30"
            android:layout_weight="1"
            android:id="@+id/btnQuaylai"
            android:text="@string/quay_lai"
            android:background="@color/blueGrayButton"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
