<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/mainBackground"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imghinhlaptop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/margin5"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTenlaptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin5"
                    android:text="@string/ten_san_pham"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtGialaptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin1"
                    android:layout_marginLeft="@dimen/margin5"
                    android:text="@string/gia_san_pham"
                    android:textColor="#dd8400"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtmota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin5"
                    android:text="@string/mo_ta"
                    android:textColor="@color/blueGrayText"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>