<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarThongTin"
        app:title="@string/thong_tin"
        android:background="@color/blueGrey"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/anhthongtin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thong_tin_ve_chung_toi"
            android:textColor="@color/mainBackground"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin10"/>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/margin30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:drawableLeft="@drawable/ic_room_black_24dp"
                android:text="@string/bach_khoa"
                android:background="@drawable/border"
                android:textSize="24sp"
                android:textColor="@color/mainBackground"
                android:layout_margin="@dimen/margin5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/margin30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="vn.edu.topica.activity.ThongTinActivity" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>

